- Gradle sorunu çözüldü. - Modeller eklendi. - Geolocation üzerine çalışıldı. - Ürün detay sayfasına başlandı.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  connectivity:
+#  connectivity:
   splashscreen: ^1.2.0
   flutter_rating_bar: ^1.2.0
   google_maps_flutter:
-  location:
+  geolocator: '^5.0.0'
 
 dev_dependencies:
   flutter_test:
