--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,10 +3,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://dl.google.com/dl/android/maven2'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "com.google.gms:google-services:4.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
