--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_rating_bar: ^1.2.0
   google_maps_flutter:
   geolocator: '^5.0.0'
-#  icons_helper:
+  flutter_swiper:
 
 dev_dependencies:
   flutter_test:
