--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "com.google.gms:google-services:4.2.0"
+        classpath 'com.android.tools.build:gradle:3.3.0' //3.2.1
+        classpath "com.google.gms:google-services:4.2.0" //4.2.0
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -28,6 +28,17 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+}
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.core'
+                    && !details.requested.name.contains('multidex')) {
+                details.useVersion "1.0.0"
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
