--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,20 +26,20 @@ dependencies:
   splashscreen: ^1.2.0
   flutter_rating_bar: ^1.2.0
   google_maps_flutter:
-  geolocator: '^5.0.0'
-  flutter_swiper:
+  geolocator: ^5.0.0
+  flutter_swiper: ^1.1.6
   cloud_firestore:
   firebase_auth:
   firebase_storage:
-  google_sign_in: ^4.0.4
-  flutter_facebook_login:
+  google_sign_in:
+  flutter_facebook_login: ^2.0.1
   http:
-  image_picker:
+  image_picker: ^0.6.0+19
   path:
   uuid:
-  multi_image_picker:
-  cached_network_image: ^1.1.0
-  rflutter_alert: ^1.0.3
+  multi_image_picker: ^4.3.4
+  cached_network_image:
+  rflutter_alert:
   url_launcher:
 
 
@@ -47,7 +47,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons:
+  flutter_launcher_icons: ^0.7.2+1
 
 flutter_icons:
   image_path: "assets/images/cocukla_launcher.png"
@@ -69,8 +69,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/temp/
-    - assets/statics/cities.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
