--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
     <application
             android:name="io.flutter.app.FlutterApplication"
             android:label="Çocukla"
             android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBQzta21qh_74XJ8z_T8dqgLaCi1R3mM5Y"/>
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTop"
