--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,12 +60,12 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0' //1.0.2
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0' //3.0.2
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    androidTestImplementation 'androidx.test:runner:1.2.0' //1.0.2
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0' //3.0.2
+    implementation 'com.facebook.android:facebook-android-sdk:5.2.0'
     implementation 'com.google.firebase:firebase-core:17.0.1' //17.0.0
     implementation 'com.google.firebase:firebase-auth:18.1.0' //18.0.0
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 }
