--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,17 @@ dependencies:
   cloud_firestore:
   firebase_auth: ^0.14.0
   firebase_storage:
+  #firebase_messaging:
+
   google_sign_in:
   flutter_facebook_login: ^2.0.1
   http:
-  path:
   uuid:
-  multi_image_picker:
+  #multi_image_picker:
+  image_picker:
   cached_network_image:
   rflutter_alert:
   url_launcher:
-  camera: ^0.5.2+2
-  #shared_preferences:
 
 
 dev_dependencies:
@@ -56,32 +56,13 @@ flutter_icons:
   ios: true
 
 
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Montserrat
       fonts:
