--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,12 @@ dependencies:
   cloud_firestore:
   firebase_auth: ^0.14.0
   firebase_storage:
-  #firebase_messaging:
+  firebase_messaging:
 
   google_sign_in:
   flutter_facebook_login: ^2.0.1
   http:
   uuid:
-  #multi_image_picker:
   image_picker:
   cached_network_image:
   rflutter_alert:
