--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:5.2.0'
     implementation 'com.google.firebase:firebase-core:17.0.1' //17.0.0
     implementation 'com.google.firebase:firebase-auth:18.1.0' //18.0.0
+    implementation 'com.google.firebase:firebase-analytics:17.0.1'
     implementation 'com.google.firebase:firebase-messaging:19.0.1' //19.0.1
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
