--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity android:name="com.facebook.FacebookActivity"
                   android:configChanges=
                           "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                  android:label="@string/app_name"/>
+                  android:label="Çocukla"/>
         <activity
                 android:name="com.facebook.CustomTabActivity"
                 android:exported="true">
